--- a/app/k8s/deploy.yaml
+++ b/app/k8s/deploy.yaml
@@ -1,26 +1,4 @@
 ---
-apiVersion: v1
-kind: Service
-metadata:
-  name: tce-swag
-  labels:
-    app: tce-swag
-  annotations:
-    prometheus.io/port: '9113'
-    prometheus.io/scrape: "true"
-spec:
-  type: LoadBalancer
-  externalTrafficPolicy: "Cluster"
-  ports:
-    - name: http
-      port: 80
-      targetPort: http
-    - name: metrics
-      port: 9113
-      targetPort: metrics
-  selector:
-    app: tce-swag
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -36,10 +14,10 @@ spec:
     metadata:
       labels:
         app: tce-swag
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "9113"
     spec:
-      automountServiceAccountToken: false
-      shareProcessNamespace: false
-      serviceAccountName: default
       containers:
         - name: tce-swag
           image: ghcr.io/stealthybox/tce-swag
@@ -47,6 +25,8 @@ spec:
           ports:
             - name: http
               containerPort: 80
+            - name: status
+              containerPort: 8080
           volumeMounts:
           - name: code
             mountPath: /usr/share/nginx/html/code/
@@ -63,3 +43,6 @@ spec:
         - name: code
           configMap:
             name: code
+      shareProcessNamespace: false
+      automountServiceAccountToken: false
+      serviceAccountName: default
