--- a/workshop-code-distributor/k8s/code-distributor.yaml
+++ b/workshop-code-distributor/k8s/code-distributor.yaml
@@ -140,6 +140,9 @@ rules:
 - apiGroups: [""]
   resources: ["namespaces", "configmaps", "workshopsessions"]
   verbs: ["get", "watch", "list"]
+- apiGroups: ["apps"]
+  resources: ["deployments"]
+  verbs: ["get", "watch", "list"]
 - apiGroups: [""]
   resources: ["configmaps"]
   verbs: ["get", "watch", "list", "create", "update", "patch"]
