Link out to campaign instead of iframe

--- a/app/conf.d/proxy.conf
+++ b/app/conf.d/proxy.conf
@@ -18,14 +18,17 @@ server {
     }
 
     location / {
-        proxy_pass https://brandvia.vmware.com/;
-        proxy_set_header Host brandvia.vmware.com;
+        root   /usr/share/nginx/html;
+        index  /swag/index.html /swag/index.htm;
+        default_type text/html;
+        # proxy_pass https://brandvia.vmware.com/;
+        # proxy_set_header Host brandvia.vmware.com;
 
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_hide_header 'x-frame-options';
-        proxy_set_header x-frame-options sameorigin;
+        # proxy_set_header X-Real-IP $remote_addr;
+        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # proxy_set_header X-Forwarded-Proto $scheme;
+        # proxy_hide_header 'x-frame-options';
+        # proxy_set_header x-frame-options sameorigin;
     }
 
     #error_page  404              /404.html;
