Improve page styles + swag image

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -5,3 +5,4 @@ COPY ./conf.d/ /etc/nginx/conf.d/
 
 COPY ./index.html /usr/share/nginx/html/swag/index.html
 COPY ./code /usr/share/nginx/html/code/code
+COPY ./images/ /usr/share/nginx/html/images/
